--- a/css/styles.css
+++ b/css/styles.css
@@ -1,17 +1,27 @@
-/* Joshua reset - START */
+/* CSS reset - START */
 * {
-    /* box-sizing: border-box; */
+    box-sizing: border-box;
 }
 
 html {
-    /* font-size: 16px; */
+    font-size: 16px;
 }
-/* Joshua reset - END */
+
+
+/* CSS reset - END */
 
 body {
     margin: 0;
     font-family: Arial, Helvetica, sans-serif;
 }
+/* 
+h1 {
+    font-size: xx-large;
+    font-weight: 900;
+    color: rgba(0, 0, 0, .7);
+    padding: 1rem;
+
+} */
 
 /* header section - START */
 
@@ -24,7 +34,6 @@ header {
     background-color: white;
     justify-content: space-between;
     align-items: center;
-    border: 1px solid;
 }
 
 nav {
@@ -44,7 +53,7 @@ nav {
 .sitenav li a {
     color: rgba(0, 0, 0, 0.7);
     text-decoration: none;
-    padding-right: 16px;
+    padding-left: 16px;
 }
 
 .sitenav li a:hover {
@@ -55,14 +64,16 @@ nav {
 .logo {
     display: flex;
     flex-direction: row;
-    height: 32px;
+    height: 46px;
     float: left;
+    padding-left: 24px;
 }
 
 .logo_txt_colmar, .logo_txt_academy {
-    font-size: 24px;
+    font-size: 26px;
     font-family: Arial, Helvetica, sans-serif;
     color: rgba(0, 0, 0, .5);
+    padding-top: .25em;
 
 }
 
@@ -72,21 +83,168 @@ nav {
 }
 
 /* header section - END */
-h1 {
-    color: red;
-}
+
 
 /* main section - START */
 
 /* topbanner */
+.topbanner {
+    background-color: rgba(0, 0, 0, 0.2);
+    color: rgba(0, 0, 0, 0.6);
+    font-family: Arial, Helvetica, sans-serif;
+    display: flex;
+    margin-top: 64px;
+}
+
+.topbanner img {
+    width: 60%;
+    padding: 32px 24px;
+    margin-right: 24px;
+    
+}
+
+.topbanner_text {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.topbanner_text h1 {
+    font-size: xx-large;
+    font-weight:bolder;
+    color: rgba(0, 0, 0, .8);
+    padding-right: 2rem;
+    padding: 0 2rem 0 0;
+    margin: 0;
+}
+.topbanner_text h2 {
+    font-size: large;
+    color: rgba(0, 0, 0, .8);
+    padding: 1rem 0 1rem 0;
+
+}
+
+.topbanner_text button {
+    background-color: rgba(0, 0, 0, .7);
+    color: white;
+    padding: 8px 0px;
+    width: 90%;
+    height: 10%;
+    font-size: middle;
+}
 
 /* midbanner */
+.midbanner_header {
+    text-align: center;
+    color: rgba(0, 0, 0, .8);
+    font-size: 1.75rem;
+    font-weight: bolder;
+    font-family: Arial, Helvetica, sans-serif;
+    padding: 32px 0;
+}
 
+.midbanner {
+    color: rgba(0, 0, 0, .5);
+    font-family: Arial, Helvetica, sans-serif;
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+    padding: 0 24px;
+}
+
+.midbanner img {
+    width: 100%;
+}
+
+.midbanner video {
+    width: 100%;
+}
+
+.midbanner_left {
+    width: 60%;
+    max-width: 60%;
+    display: inline-block;
+    padding: 32px 24px 32px 0px;
+    font-weight: bolder;
+    color: rgba(0, 0, 0, .7);
+}
+
+.midbanner_right {
+    width: 40%;
+    display: inline-block;
+    border-left: 1px solid rgba(0, 0, 0, 0.2);
+}
+
+.midbanner_right_no_border {
+    width: 40%;
+    max-width: 35%;
+    display: inline-block;
+}
+
+.orientation, .campus, .guest {
+    display: flex;
+    word-break: break-all;
+    border-bottom: 1px solid rgba(0, 0, 0, 0.2);
+}
+
+.orientation h3, .campus h3, .guest h3 {
+    padding: 1rem 0 0 0;
+    font-weight: bold;
+    color: rgba(0, 0, 0, .8);
+}
+
+.orientation p {
+    padding: 0;
+    font-size: .9rem;
+    font-family: Tahoma, sans-serif;
+}
+
+.orientation img, .campus img, .guest img{
+    max-width: 35%;
+    max-height: auto;
+    object-fit: cover;
+    padding: 16px;
+}
+
+.readmore {
+    color: rgba(0, 0, 0, 0.8)
+}
+
+/* Thesis exhibit */
+.fisma, .now_then {
+    display: flex;
+    word-break: break-all;
+}
+
+.shade {
+    background-color: rgba(0, 0, 0, .1);
+}
+
+.fisma img, .now_then img{
+    max-width: 35%;
+    max-height: auto;
+    object-fit: cover;
+    padding: 16px;
+}
 /* bottom banner */
 
 /* main section - END */
 
 
 /* footer section - START */
+footer {
+    border-top: 1px solid rgba(0, 0, 0, .1);
+    margin-top: 16px;
+    padding-left: 24px;
+    padding-bottom: 2rem;
+    display: flex;
+    justify-content: space-between;
+    color: rgba(0, 0, 0, .6);
+    font-size: .9rem;
+}
+
+.right_24 {
+    padding-right: 24px;
+}
 
 /* footer section - END */
