--- a/css/styles.css
+++ b/css/styles.css
@@ -1,48 +1,52 @@
-/* CSS reset - START */
-* {
-    box-sizing: border-box;
-}
-
-html {
-    font-size: 16px;
-}
-
-
-/* CSS reset - END */
-
 body {
     margin: 0;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: Verdana, sans-serif;
 }
-/* 
-h1 {
-    font-size: xx-large;
-    font-weight: 900;
-    color: rgba(0, 0, 0, .7);
-    padding: 1rem;
-
-} */
 
 /* header section - START */
-
 header {
     display: flex;
+    justify-content: space-between;
+    align-items: center;
     position: fixed;
     width: 100%;
     height: 64px;
-    top: 0px;
+    top: 0;
+    z-index: 100;
     background-color: white;
-    justify-content: space-between;
-    align-items: center;
 }
 
-nav {
-    float: right;
-    padding: 24px;
+.logo {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    float: left;
+    height: 32px;
+    padding-left: 24px;
+}
+
+.logo_colmar,
+.logo_academy {
+    font-size: 24px;
     font-family: Arial, Helvetica, sans-serif;
 }
 
-.sitenav {
+.logo_colmar {
+    font-weight: bold;
+    color: gray;
+}
+
+.logo_academy {
+    color: lightgray;
+}
+
+.menu {
+    padding-right: 24px;
+    float: right;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+.navbar {
     display: flex;
     align-items: right;
     list-style: none;
@@ -50,113 +54,75 @@ nav {
     text-align: left;
 }
 
-.sitenav li a {
-    color: rgba(0, 0, 0, 0.7);
+.navbar li a {
+    color: rgb(127, 127, 127, 0.8);
     text-decoration: none;
-    padding-left: 16px;
+    padding-right: 16px;
+    display: inline-block;
 }
 
-.sitenav li a:hover {
-    color: rgba(31, 0, 115, .7);
+.navbar li a:hover {
+    color: rgba(16, 18, 151, 0.8);
     text-decoration: underline;
-}
-
-.logo {
-    display: flex;
-    flex-direction: row;
-    height: 46px;
-    float: left;
-    padding-left: 24px;
-}
-
-.logo_txt_colmar, .logo_txt_academy {
-    font-size: 26px;
-    font-family: Arial, Helvetica, sans-serif;
-    color: rgba(0, 0, 0, .5);
-    padding-top: .25em;
-
-}
-
-.logo_txt_colmar {
-    font-weight: bold;
-    color: rgba(0, 0, 0, .7);
 }
 
 /* header section - END */
 
-
 /* main section - START */
+main {
+    padding-top: 64px;
+    width: 100%;
+}
 
 /* topbanner */
 .topbanner {
-    background-color: rgba(0, 0, 0, 0.2);
-    color: rgba(0, 0, 0, 0.6);
+    background-color: rgb(0, 0, 0, 0.2);
+    color: rgb(0, 0, 0, 0.6);
     font-family: Arial, Helvetica, sans-serif;
     display: flex;
-    margin-top: 64px;
 }
 
 .topbanner img {
     width: 60%;
-    padding: 32px 24px;
-    margin-right: 24px;
-    
+    padding: 32px 24px 32px 24px;
+    /* top right bottom left*/
 }
 
 .topbanner_text {
     display: flex;
     flex-direction: column;
     justify-content: center;
+    align-items: flex-start;
 }
 
-.topbanner_text h1 {
-    font-size: xx-large;
-    font-weight:bolder;
-    color: rgba(0, 0, 0, .8);
-    padding-right: 2rem;
-    padding: 0 2rem 0 0;
-    margin: 0;
-}
 .topbanner_text h2 {
-    font-size: large;
-    color: rgba(0, 0, 0, .8);
-    padding: 1rem 0 1rem 0;
-
+    font-size: larger;
 }
 
-.topbanner_text button {
-    background-color: rgba(0, 0, 0, .7);
+.topbanner button {
+    background-color: rgb(0, 0, 0, 0.4);
     color: white;
-    padding: 8px 0px;
+    box-sizing: content-box;
+    border: none;
     width: 90%;
     height: 10%;
-    font-size: middle;
+    top: 6px;
+    bottom: 6px;
+    font-size: 1em;
+}
+
+.topbanner button:hover {
+    cursor: pointer;
+    background-color: rgba(16, 18, 151, 0.8);
+    color: white;
 }
 
 /* midbanner */
-.midbanner_header {
-    text-align: center;
-    color: rgba(0, 0, 0, .8);
-    font-size: 1.75rem;
-    font-weight: bolder;
-    font-family: Arial, Helvetica, sans-serif;
-    padding: 32px 0;
-}
-
 .midbanner {
-    color: rgba(0, 0, 0, .5);
+    color: rgb(0, 0, 0, 0.6);
     font-family: Arial, Helvetica, sans-serif;
     display: flex;
     justify-content: space-between;
-    width: 100%;
-    padding: 0 24px;
-}
-
-.midbanner img {
-    width: 100%;
-}
-
-.midbanner video {
     width: 100%;
 }
 
@@ -164,53 +130,214 @@ nav {
     width: 60%;
     max-width: 60%;
     display: inline-block;
-    padding: 32px 24px 32px 0px;
-    font-weight: bolder;
-    color: rgba(0, 0, 0, .7);
+    padding: 32px 0px 32px 24px;
+    /* top right bottom left*/
 }
 
 .midbanner_right {
     width: 40%;
-    display: inline-block;
-    border-left: 1px solid rgba(0, 0, 0, 0.2);
-}
-
-.midbanner_right_no_border {
-    width: 40%;
     max-width: 35%;
     display: inline-block;
+    border-left: 1px solid rgb(0, 0, 0, 0.2);
 }
 
-.orientation, .campus, .guest {
+.midbanner_left img {
+    max-width: 100%;
+}
+
+.midbanner_left h1,
+.midbanner_left p {
+    padding-left: 24px;
+}
+
+.midbanner_left h1 {
+    font-size: xx-large;
+}
+
+.orientation,
+.campus,
+.guest {
     display: flex;
     word-break: break-all;
-    border-bottom: 1px solid rgba(0, 0, 0, 0.2);
+    border-bottom: 1px solid rgb(0, 0, 0, 0.2);
 }
 
-.orientation h3, .campus h3, .guest h3 {
-    padding: 1rem 0 0 0;
-    font-weight: bold;
-    color: rgba(0, 0, 0, .8);
+.orientation:hover,
+.campus:hover,
+.guest:hover {
+    cursor: pointer;
+    background-color: rgb(0, 0, 0, 0.1);
 }
 
-.orientation p {
-    padding: 0;
-    font-size: .9rem;
-    font-family: Tahoma, sans-serif;
-}
-
-.orientation img, .campus img, .guest img{
+.orientation img,
+.campus img,
+.guest img {
     max-width: 35%;
     max-height: auto;
     object-fit: cover;
     padding: 16px;
 }
 
-.readmore {
-    color: rgba(0, 0, 0, 0.8)
+.orientation_date,
+.our_campus,
+.guest_lecture {
+    width: 65%;
+    padding: 8px;
 }
 
-/* Thesis exhibit */
+.orientation_date h2,
+.our_campus h2,
+.guest_lecture h2 {
+    font-size: large;
+}
+
+.orientation_date p,
+.our_campus p,
+.guest_lecture p {
+    font-size: medium;
+}
+
+.read_more {
+    color: rgba(16, 18, 151, 0.8);
+}
+
+/* bottom banner */
+.bottombanner-wrap {
+    display: block;
+    box-sizing: padding-box;
+    padding: 0px 72px;
+    background-color: rgba(0, 0, 0, .1);
+}
+
+.bottombanner {
+    display: flex;
+    flex-direction: column;
+    color: rgb(0, 0, 0, 0.6);
+    font-family: Arial, Helvetica, sans-serif;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    margin: 0;
+    padding: 0;
+}
+
+.bottombanner h1 {
+    font-size: xx-large;
+    font-weight: bold;
+    padding: 32px 0;
+    margin:0;
+    color: rgb(0, 0, 0, 0.6);
+}
+
+.start_learning {
+    width: 100%;
+    list-style: none;
+    display: flex;
+    justify-content: space-around;
+    margin: 0;
+    padding: 0 0 24;
+}
+
+.crop {
+    width: 100%;
+    height: auto;
+    overflow: hidden;
+}
+
+.software_engineering,
+.computer_art,
+.design,
+.data,
+.business,
+.marketing {
+    display: inline-block;
+    background-color: white;
+    width: 33%;
+    margin: 16px;
+}
+
+.software_engineering img,
+.computer_art img,
+.design img,
+.data img,
+.business img,
+.marketing img {
+    width: 100%;
+    height: auto;
+}
+
+.software_engineering h3,
+.computer_art h3,
+.design h3,
+.data h3,
+.business h3,
+.marketing h3 {
+    padding-top: 16px;
+    padding-left: 16px;
+    margin: 0;
+}
+
+.software_engineering p,
+.computer_art p,
+.design p,
+.data p,
+.business p,
+.marketing p {
+    padding-bottom: 8px;
+    padding-left: 16px;
+    padding-right: 16px;
+}
+
+/* last banner - START */
+.lastbanner-wrap {
+    display: block;
+    box-sizing: padding-box;
+    padding: 0 24px;
+}
+
+.lastbanner {
+    color: rgba(0, 0, 0, .5);
+    font-family: Arial, Helvetica, sans-serif;
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+    margin:0;
+}
+
+.lastbanner_header > h2 {
+    padding: 0;
+    margin: 0;
+}
+
+.lastbanner_header {
+    text-align: center;
+    color: rgba(0, 0, 0, .8);
+    font-size: 1.75rem;
+    font-weight: bolder;
+    font-family: Arial, Helvetica, sans-serif;
+    padding: 32px 0;
+    margin: 0;
+}
+
+.lastbanner video {
+    width: 100%;
+}
+
+.lastbanner_right_no_border {
+    width: 40%;
+    /* max-width: 35%; */
+    display: inline-block;
+}
+
+.lastbanner_left {
+    width: 60%;
+    max-width: 60%;
+    display: inline-block;
+    margin: 32px 24px 32px 0px;
+    font-weight: bolder;
+    color: rgba(0, 0, 0, .7);
+}
+
 .fisma, .now_then {
     display: flex;
     word-break: break-all;
@@ -224,27 +351,263 @@ nav {
     max-width: 35%;
     max-height: auto;
     object-fit: cover;
-    padding: 16px;
+    margin: 16px;
 }
-/* bottom banner */
+
+.lastbanner_left p {
+    font-weight: normal;
+}
+/* last banner - END */
 
 /* main section - END */
 
-
 /* footer section - START */
 footer {
-    border-top: 1px solid rgba(0, 0, 0, .1);
-    margin-top: 16px;
-    padding-left: 24px;
-    padding-bottom: 2rem;
+    border-top: 1px solid rgb(0, 0, 0, 0.2);
+    color: rgb(0, 0, 0, 0.6);
+    font-size: small;
     display: flex;
+    bottom: 0;
+    width: 100%;
     justify-content: space-between;
-    color: rgba(0, 0, 0, .6);
-    font-size: .9rem;
 }
 
-.right_24 {
+.copyright {
+    display: flex;
+    text-align: left;
+    float: left;
+    left: 0;
+    padding-left: 24px;
+    margin: 0;
+    padding-top: 16px;
+}
+
+.policies {
+    display: flex;
+    align-items: center;
+    list-style: none;
+    float: right;
+    text-align: right;
     padding-right: 24px;
 }
 
+.policies li,
+.policies li a {
+    text-decoration: none;
+    color: rgb(0, 0, 0, 0.6);
+    margin: 0 0 30px 6px;
+}
 /* footer section - END */
+
+/* hidden sections - START */
+/* TODO */
+.menu_mobile {
+    display: none;
+}
+
+.midbanner_mobile {
+    display: none;
+}
+
+.bottombanner_mobile {
+    display: none;
+}
+
+.lastbanner_mobile {
+    display: none;
+}
+
+/* hidden sections - END */
+
+
+/* media queries */
+@media screen and (max-width: 640px) {
+
+    /* header - START */
+    /* TODO */
+    header .logo,
+    header .menu {
+        display: none;
+    }
+
+    /* menu mobile */
+    /* TODO */
+    header .menu_mobile {
+        display: flex;
+        width: 100%;
+        height: 64px;
+        margin: auto;
+        padding-right: 24px;
+        border: 1px solid gray;
+    }
+
+    .navbar {
+        justify-content: space-between;
+        width: 100%;
+        display: flex;
+        list-style: none;
+        margin: auto;
+    }
+
+    /* header - END */
+
+    /* main section - START */
+    /* TODO */
+    .topbanner {
+        background-color: rgba(0, 0, 0, .2);
+        color: rgba(0, 0, 0, .6);
+        font-family: Arial, Helvetica, sans-serif;
+        display: block;
+        padding-bottom: 32px;
+    }
+
+    .topbanner img {
+        width: 100%;
+        padding: 0px;
+    }
+
+    .topbanner_text {
+        display: flex;
+        flex-direction: column;
+        padding-left: 16px;
+    }
+
+    .topbanner button {
+        padding-top: 2%;
+        padding-bottom: 2%;
+        background-color: rgba(0, 0, 0, .4);
+        color: white;
+        border: none;
+        width: 90%;
+        height: 50%;
+        font-size: 1.5em;
+    }
+
+    /* mid banner */
+    .midbanner {
+        display: none;
+    }
+
+    /* mid banner - MOBILE */
+    .midbanner_mobile {
+        display: block;
+        padding-bottom: 32px;
+    }
+
+    .midbanner_mobile>.banner {
+        width: 100%;
+        max-width: 100%;
+    }
+
+    .midbanner_mobile>.banner>.orientation,
+    .midbanner_mobile>.banner>.campus,
+    .midbanner_mobile>.banner>.guest {
+        display: flex;
+        flex-direction: column;
+        border-bottom: none;
+    }
+
+    .midbanner_mobile>.banner>.orientation img,
+    .midbanner_mobile>.banner>.campus img,
+    .midbanner_mobile>.banner>.guest img {
+        max-width: 100%;
+        padding: 16px;
+    }
+
+    .midbanner_mobile>.banner>.orientation h2,
+    .midbanner_mobile>.banner>.campus h2,
+    .midbanner_mobile>.banner>.guest h2 {
+        font-size: xx-large;
+        color: rgba(0, 0, 0, .5);
+        margin: 0 0 0 16px;
+        padding: 0 0 0 16px;
+    }
+
+    .midbanner_mobile>.banner>.orientation p,
+    .midbanner_mobile>.banner>.campus p,
+    .midbanner_mobile>.banner>.guest p {
+        font-size: large;
+        color: rgba(0, 0, 0, .5);
+        margin: 16px 0 0 16px;
+        padding: 0 0 0 16px;
+    }
+
+    .read_more a:link {
+        color: rgba(0, 162, 255, .8);
+        text-decoration: none;
+    }
+
+    /* bottom banner */
+
+    .bottombanner-wrap {
+        display: none;
+    }
+
+    .bottombanner_mobile {
+        display: block;
+        border-top: 1px solid rgba(0, 0, 0, 0.1);
+        width: 100%;
+        padding-bottom: 32px;
+    }
+
+    .gray-bold-header {
+        font-size: xx-large;
+        font-weight: bolder;
+        color: rgba(0, 0, 0, .6);
+        padding: 32px 0 16px 0;
+        margin: 0 auto;
+        text-align: center;
+    }
+
+    .gray-background {
+        background-color: lightgray;
+        margin: 0 16 8 16;
+        padding: 16px 0 24px 16px;
+        font-size: x-large;
+        color: rgba(0, 0, 0, .5);
+        font-weight: 600;
+    }
+
+    .no-decoration {
+        text-decoration: none;
+    }
+
+    .gray-background:hover {
+        background-color: darkgray;
+        color: white;
+    }
+
+    .lastbanner-wrap {
+        display: none;
+    }
+
+    .lastbanner_mobile {
+        display: block;
+        border-top: 1px solid rgba(0, 0, 0, 0.1);
+        margin-bottom: 24px;
+        width: 100%;
+        box-sizing: border-box;
+    }
+
+    .full-width-container {
+        width: 100%;
+        margin: 0;
+    }
+
+    .full-width-container video {
+        width: 100%;
+    }
+    /* main section - END */
+
+    /* footer section - START */
+    .policies {
+        display: none;
+    }
+
+    footer {
+        padding: 16px 0;
+        font-size: 16px;
+        border: none;
+    }
+    /* footer section - END */
+}
