--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,7 @@
 body {
     margin: 0;
-    font-family: Verdana, sans-serif;
+    font-family: 'Gill Sans', sans-serif;
+    word-break: normal;
 }
 
 /* header section - START */
@@ -28,7 +29,6 @@ header {
 .logo_colmar,
 .logo_academy {
     font-size: 24px;
-    font-family: Arial, Helvetica, sans-serif;
 }
 
 .logo_colmar {
@@ -43,7 +43,6 @@ header {
 .menu {
     padding-right: 24px;
     float: right;
-    font-family: Arial, Helvetica, sans-serif;
 }
 
 .navbar {
@@ -62,8 +61,8 @@ header {
 }
 
 .navbar li a:hover {
-    color: rgba(16, 18, 151, 0.8);
-    text-decoration: underline;
+    color: goldenrod;
+    text-decoration: none;
 }
 
 /* header section - END */
@@ -78,14 +77,12 @@ main {
 .topbanner {
     background-color: rgb(0, 0, 0, 0.2);
     color: rgb(0, 0, 0, 0.6);
-    font-family: Arial, Helvetica, sans-serif;
     display: flex;
 }
 
 .topbanner img {
     width: 60%;
     padding: 32px 24px 32px 24px;
-    /* top right bottom left*/
 }
 
 .topbanner_text {
@@ -113,14 +110,13 @@ main {
 
 .topbanner button:hover {
     cursor: pointer;
-    background-color: rgba(16, 18, 151, 0.8);
+    background-color: rgba(87, 75, 7, 0.8);
     color: white;
 }
 
 /* midbanner */
 .midbanner {
     color: rgb(0, 0, 0, 0.6);
-    font-family: Arial, Helvetica, sans-serif;
     display: flex;
     justify-content: space-between;
     width: 100%;
@@ -131,7 +127,6 @@ main {
     max-width: 60%;
     display: inline-block;
     padding: 32px 0px 32px 24px;
-    /* top right bottom left*/
 }
 
 .midbanner_right {
@@ -158,7 +153,6 @@ main {
 .campus,
 .guest {
     display: flex;
-    word-break: break-all;
     border-bottom: 1px solid rgb(0, 0, 0, 0.2);
 }
 
@@ -181,9 +175,10 @@ main {
 .orientation_date,
 .our_campus,
 .guest_lecture {
-    width: 65%;
+    width: 90%;
     padding: 8px;
 }
+
 
 .orientation_date h2,
 .our_campus h2,
@@ -205,7 +200,7 @@ main {
 .bottombanner-wrap {
     display: block;
     box-sizing: padding-box;
-    padding: 0px 72px;
+    padding: 0px 56px;
     background-color: rgba(0, 0, 0, .1);
 }
 
@@ -213,7 +208,6 @@ main {
     display: flex;
     flex-direction: column;
     color: rgb(0, 0, 0, 0.6);
-    font-family: Arial, Helvetica, sans-serif;
     justify-content: center;
     align-items: center;
     width: 100%;
@@ -297,7 +291,6 @@ main {
 
 .lastbanner {
     color: rgba(0, 0, 0, .5);
-    font-family: Arial, Helvetica, sans-serif;
     display: flex;
     justify-content: space-between;
     width: 100%;
@@ -314,7 +307,6 @@ main {
     color: rgba(0, 0, 0, .8);
     font-size: 1.75rem;
     font-weight: bolder;
-    font-family: Arial, Helvetica, sans-serif;
     padding: 32px 0;
     margin: 0;
 }
@@ -325,7 +317,6 @@ main {
 
 .lastbanner_right_no_border {
     width: 40%;
-    /* max-width: 35%; */
     display: inline-block;
 }
 
@@ -340,7 +331,6 @@ main {
 
 .fisma, .now_then {
     display: flex;
-    word-break: break-all;
 }
 
 .shade {
@@ -438,7 +428,7 @@ footer {
         height: 64px;
         margin: auto;
         padding-right: 24px;
-        border: 1px solid gray;
+        /* border: 1px solid gray; */
     }
 
     .navbar {
@@ -449,6 +439,12 @@ footer {
         margin: auto;
     }
 
+    .navbar img {
+        height: 100%;
+        padding: auto 0;
+        margin: auto 0;
+    }
+
     /* header - END */
 
     /* main section - START */
@@ -456,7 +452,6 @@ footer {
     .topbanner {
         background-color: rgba(0, 0, 0, .2);
         color: rgba(0, 0, 0, .6);
-        font-family: Arial, Helvetica, sans-serif;
         display: block;
         padding-bottom: 32px;
     }
@@ -573,7 +568,7 @@ footer {
     }
 
     .gray-background:hover {
-        background-color: darkgray;
+        background-color: gray;
         color: white;
     }
 
