--- a/css/styles.css
+++ b/css/styles.css
@@ -600,7 +600,8 @@ footer {
     }
 
     footer {
-        padding: 16px 0;
+        margin-top: 0;
+        padding: 0 0 16px 0;
         font-size: 16px;
         border: none;
     }
