--- a/css/styles.css
+++ b/css/styles.css
@@ -64,7 +64,6 @@ header {
     color: goldenrod;
     text-decoration: none;
 }
-
 /* header section - END */
 
 /* main section - START */
@@ -73,7 +72,7 @@ main {
     width: 100%;
 }
 
-/* topbanner */
+/* topbanner - START */
 .topbanner {
     background-color: rgb(0, 0, 0, 0.2);
     color: rgb(0, 0, 0, 0.6);
@@ -113,8 +112,9 @@ main {
     background-color: rgba(87, 75, 7, 0.8);
     color: white;
 }
+/* topbanner - END */
 
-/* midbanner */
+/* midbanner - START */
 .midbanner {
     color: rgb(0, 0, 0, 0.6);
     display: flex;
@@ -195,8 +195,9 @@ main {
 .read_more {
     color: rgba(16, 18, 151, 0.8);
 }
+/* midbanner - END */
 
-/* bottom banner */
+/* bottom banner -START */
 .bottombanner-wrap {
     display: block;
     box-sizing: padding-box;
@@ -219,7 +220,7 @@ main {
     font-size: xx-large;
     font-weight: bold;
     padding: 32px 0;
-    margin:0;
+    margin: 0;
     color: rgb(0, 0, 0, 0.6);
 }
 
@@ -281,6 +282,7 @@ main {
     padding-left: 16px;
     padding-right: 16px;
 }
+/* bottom banner - END */
 
 /* last banner - START */
 .lastbanner-wrap {
@@ -294,10 +296,10 @@ main {
     display: flex;
     justify-content: space-between;
     width: 100%;
-    margin:0;
+    margin: 0;
 }
 
-.lastbanner_header > h2 {
+.lastbanner_header>h2 {
     padding: 0;
     margin: 0;
 }
@@ -329,7 +331,8 @@ main {
     color: rgba(0, 0, 0, .7);
 }
 
-.fisma, .now_then {
+.fisma,
+.now_then {
     display: flex;
 }
 
@@ -337,7 +340,8 @@ main {
     background-color: rgba(0, 0, 0, .1);
 }
 
-.fisma img, .now_then img{
+.fisma img,
+.now_then img {
     max-width: 35%;
     max-height: auto;
     object-fit: cover;
@@ -348,7 +352,6 @@ main {
     font-weight: normal;
 }
 /* last banner - END */
-
 /* main section - END */
 
 /* footer section - START */
@@ -390,7 +393,6 @@ footer {
 /* footer section - END */
 
 /* hidden sections - START */
-/* TODO */
 .menu_mobile {
     display: none;
 }
@@ -406,29 +408,24 @@ footer {
 .lastbanner_mobile {
     display: none;
 }
-
 /* hidden sections - END */
 
-
-/* media queries */
+/* mobile view media queries - START */
 @media screen and (max-width: 640px) {
 
     /* header - START */
-    /* TODO */
     header .logo,
     header .menu {
         display: none;
     }
 
     /* menu mobile */
-    /* TODO */
     header .menu_mobile {
         display: flex;
         width: 100%;
         height: 64px;
         margin: auto;
         padding-right: 24px;
-        /* border: 1px solid gray; */
     }
 
     .navbar {
@@ -444,11 +441,10 @@ footer {
         padding: auto 0;
         margin: auto 0;
     }
-
+    /* menu mobile - END */
     /* header - END */
 
     /* main section - START */
-    /* TODO */
     .topbanner {
         background-color: rgba(0, 0, 0, .2);
         color: rgba(0, 0, 0, .6);
@@ -533,7 +529,6 @@ footer {
     }
 
     /* bottom banner */
-
     .bottombanner-wrap {
         display: none;
     }
@@ -607,3 +602,4 @@ footer {
     }
     /* footer section - END */
 }
+/* mobile view media queries - END */
