--- a/css/styles.css
+++ b/css/styles.css
@@ -1,605 +1,128 @@
-body {
-    margin: 0;
-    font-family: 'Gill Sans', sans-serif;
-    word-break: normal;
+html {
+    box-sizing: border-box;
+    font-family: 'Roboto', sans-serif !important;
 }
 
-/* header section - START */
-header {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    position: fixed;
+.container-1200 {
+    max-width: 1200px;
+}
+
+/* Find The Hat Game */
+#game-field {
+    border-left: 1px solid black;
+    border-right: 1px solid black;
+    background-color: aliceblue;
+    z-index: 0;
+}
+
+.paw-prints {
+    background-image: url(/images/find-the-hat/paw-print.png);
+}
+
+.game-console-top {
+    padding: 10px 10px 5px 10px;
+    border: 1px solid black;
+    border-bottom: none;
+    border-radius: 50px 50px 0 0 ;
+    text-align: center;
+    vertical-align: middle;
+    background-color: aliceblue;
+}
+
+.triangle-down {
+	width: 0;
+	height: 0;
+	border-left: 25px solid transparent;
+	border-right: 25px solid transparent;
+	border-top: 50px solid #555;
+}
+
+.triangle-up {
+	width: 0;
+	height: 0;
+	border-left: 25px solid transparent;
+	border-right: 25px solid transparent;
+	border-bottom: 50px solid #555;
+}
+
+.triangle-left {
+	width: 0;
+	height: 0;
+	border-top: 25px solid transparent;
+	border-right: 50px solid #555;
+	border-bottom: 25px solid transparent;
+}
+
+.triangle-right {
+	width: 0;
+	height: 0;
+	border-top: 25px solid transparent;
+	border-left: 50px solid #555;
+	border-bottom: 25px solid transparent;
+}
+
+.game-console-bottom {
+    padding: 10px 10px 5px 10px;
+    border: 1px solid black;
+    border-top: none;
+    border-radius: 0 0 50px 50px;
+    text-align: center;
+    vertical-align: middle;
+    background-color: aliceblue;
+}
+
+.controller-table {
     width: 100%;
-    height: 64px;
-    top: 0;
-    z-index: 100;
-    background-color: white;
 }
 
-.logo {
+.controller-table td {
+    padding: 20px;
+}
+
+.my-flex-container {
+    border: 1px solid blue;
+    border-radius: 10px;
+    margin:0 10px 10px;
+    padding: 10px 10px 5px 10px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    background-image: url(/images/find-the-hat/background-earth-brown.png);
+}
+
+.my-flex-row-container {
     display: flex;
     flex-direction: row;
-    align-items: center;
-    float: left;
-    height: 32px;
-    padding-left: 24px;
-}
-
-.logo_colmar,
-.logo_academy {
-    font-size: 24px;
-}
-
-.logo_colmar {
-    font-weight: bold;
-    color: gray;
-}
-
-.logo_academy {
-    color: lightgray;
-}
-
-.menu {
-    padding-right: 24px;
-    float: right;
-}
-
-.navbar {
-    display: flex;
-    align-items: right;
-    list-style: none;
-    float: left;
-    text-align: left;
-}
-
-.navbar li a {
-    color: rgb(127, 127, 127, 0.8);
-    text-decoration: none;
-    padding-right: 16px;
-    display: inline-block;
-}
-
-.navbar li a:hover {
-    color: goldenrod;
-    text-decoration: none;
-}
-/* header section - END */
-
-/* main section - START */
-main {
-    padding-top: 64px;
-    width: 100%;
-}
-
-/* topbanner - START */
-.topbanner {
-    background-color: rgb(0, 0, 0, 0.2);
-    color: rgb(0, 0, 0, 0.6);
-    display: flex;
-}
-
-.topbanner img {
-    width: 60%;
-    padding: 32px 24px 32px 24px;
-}
-
-.topbanner_text {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: flex-start;
-}
-
-.topbanner_text h2 {
-    font-size: larger;
-}
-
-.topbanner button {
-    background-color: rgb(0, 0, 0, 0.4);
-    color: white;
-    box-sizing: content-box;
-    border: none;
-    width: 90%;
-    height: 10%;
-    top: 6px;
-    bottom: 6px;
-    font-size: 1em;
-}
-
-.topbanner button:hover {
-    cursor: pointer;
-    background-color: rgba(87, 75, 7, 0.8);
-    color: white;
-}
-/* topbanner - END */
-
-/* midbanner - START */
-.midbanner {
-    color: rgb(0, 0, 0, 0.6);
-    display: flex;
+    flex-wrap: wrap;
     justify-content: space-between;
     width: 100%;
+    padding: 0 0 .75vw 0;
+
 }
 
-.midbanner_left {
-    width: 60%;
-    max-width: 60%;
-    display: inline-block;
-    padding: 32px 0px 32px 24px;
+.my-flex-item-inside {
+    background-color: rgba(55, 55, 55, .5);
+    width: 7.5vw;
+    height: 7.5vw;
 }
 
-.midbanner_right {
-    width: 40%;
-    max-width: 35%;
-    display: inline-block;
-    border-left: 1px solid rgb(0, 0, 0, 0.2);
-}
-
-.midbanner_left img {
-    max-width: 100%;
-}
-
-.midbanner_left h1,
-.midbanner_left p {
-    padding-left: 24px;
-}
-
-.midbanner_left h1 {
-    font-size: xx-large;
-}
-
-.orientation,
-.campus,
-.guest {
-    display: flex;
-    border-bottom: 1px solid rgb(0, 0, 0, 0.2);
-}
-
-.orientation:hover,
-.campus:hover,
-.guest:hover {
-    cursor: pointer;
-    background-color: rgb(0, 0, 0, 0.1);
-}
-
-.orientation img,
-.campus img,
-.guest img {
-    max-width: 35%;
-    max-height: auto;
-    object-fit: cover;
-    padding: 16px;
-}
-
-.orientation_date,
-.our_campus,
-.guest_lecture {
-    width: 90%;
-    padding: 8px;
-}
-
-
-.orientation_date h2,
-.our_campus h2,
-.guest_lecture h2 {
-    font-size: large;
-}
-
-.orientation_date p,
-.our_campus p,
-.guest_lecture p {
-    font-size: medium;
-}
-
-.read_more {
-    color: rgba(16, 18, 151, 0.8);
-}
-/* midbanner - END */
-
-/* bottom banner -START */
-.bottombanner-wrap {
-    display: block;
-    box-sizing: padding-box;
-    padding: 0px 56px;
-    background-color: rgba(0, 0, 0, .1);
-}
-
-.bottombanner {
-    display: flex;
-    flex-direction: column;
-    color: rgb(0, 0, 0, 0.6);
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    margin: 0;
-    padding: 0;
-}
-
-.bottombanner h1 {
-    font-size: xx-large;
-    font-weight: bold;
-    padding: 32px 0;
-    margin: 0;
-    color: rgb(0, 0, 0, 0.6);
-}
-
-.start_learning {
-    width: 100%;
-    list-style: none;
-    display: flex;
-    justify-content: space-around;
-    margin: 0;
-    padding: 0 0 24;
-}
-
-.crop {
-    width: 100%;
-    height: auto;
-    overflow: hidden;
-}
-
-.software_engineering,
-.computer_art,
-.design,
-.data,
-.business,
-.marketing {
-    display: inline-block;
-    background-color: white;
-    width: 33%;
-    margin: 16px;
-}
-
-.software_engineering img,
-.computer_art img,
-.design img,
-.data img,
-.business img,
-.marketing img {
-    width: 100%;
-    height: auto;
-}
-
-.software_engineering h3,
-.computer_art h3,
-.design h3,
-.data h3,
-.business h3,
-.marketing h3 {
-    padding-top: 16px;
-    padding-left: 16px;
-    margin: 0;
-}
-
-.software_engineering p,
-.computer_art p,
-.design p,
-.data p,
-.business p,
-.marketing p {
-    padding-bottom: 8px;
-    padding-left: 16px;
-    padding-right: 16px;
-}
-/* bottom banner - END */
-
-/* last banner - START */
-.lastbanner-wrap {
-    display: block;
-    box-sizing: padding-box;
-    padding: 0 24px;
-}
-
-.lastbanner {
-    color: rgba(0, 0, 0, .5);
-    display: flex;
-    justify-content: space-between;
-    width: 100%;
-    margin: 0;
-}
-
-.lastbanner_header>h2 {
-    padding: 0;
-    margin: 0;
-}
-
-.lastbanner_header {
-    text-align: center;
-    color: rgba(0, 0, 0, .8);
-    font-size: 1.75rem;
-    font-weight: bolder;
-    padding: 32px 0;
-    margin: 0;
-}
-
-.lastbanner video {
-    width: 100%;
-}
-
-.lastbanner_right_no_border {
-    width: 40%;
-    display: inline-block;
-}
-
-.lastbanner_left {
-    width: 60%;
-    max-width: 60%;
-    display: inline-block;
-    margin: 32px 24px 32px 0px;
-    font-weight: bolder;
-    color: rgba(0, 0, 0, .7);
-}
-
-.fisma,
-.now_then {
-    display: flex;
-}
-
-.shade {
-    background-color: rgba(0, 0, 0, .1);
-}
-
-.fisma img,
-.now_then img {
-    max-width: 35%;
-    max-height: auto;
-    object-fit: cover;
-    margin: 16px;
-}
-
-.lastbanner_left p {
-    font-weight: normal;
-}
-/* last banner - END */
-/* main section - END */
-
-/* footer section - START */
-footer {
-    border-top: 1px solid rgb(0, 0, 0, 0.2);
-    color: rgb(0, 0, 0, 0.6);
-    font-size: small;
-    display: flex;
-    bottom: 0;
-    width: 100%;
-    justify-content: space-between;
-}
-
-.copyright {
-    display: flex;
-    text-align: left;
-    float: left;
-    left: 0;
-    padding-left: 24px;
-    margin: 0;
-    padding-top: 16px;
-}
-
-.policies {
-    display: flex;
-    align-items: center;
-    list-style: none;
-    float: right;
-    text-align: right;
-    padding-right: 24px;
-}
-
-.policies li,
-.policies li a {
-    text-decoration: none;
-    color: rgb(0, 0, 0, 0.6);
-    margin: 0 0 30px 6px;
-}
-/* footer section - END */
-
-/* hidden sections - START */
-.menu_mobile {
-    display: none;
-}
-
-.midbanner_mobile {
-    display: none;
-}
-
-.bottombanner_mobile {
-    display: none;
-}
-
-.lastbanner_mobile {
-    display: none;
-}
-/* hidden sections - END */
-
-/* mobile view media queries - START */
-@media screen and (max-width: 640px) {
-
-    /* header - START */
-    header .logo,
-    header .menu {
-        display: none;
+@media only screen and (min-width: 576px) {
+    .my-flex-item-inside {
+        width: 3.3vw;
+        height: 3.3vw;
     }
-
-    /* menu mobile */
-    header .menu_mobile {
-        display: flex;
-        width: 100%;
-        height: 64px;
-        margin: auto;
-        padding-right: 24px;
-    }
-
-    .navbar {
-        justify-content: space-between;
-        width: 100%;
-        display: flex;
-        list-style: none;
-        margin: auto;
-    }
-
-    .navbar img {
-        height: 100%;
-        padding: auto 0;
-        margin: auto 0;
-    }
-    /* menu mobile - END */
-    /* header - END */
-
-    /* main section - START */
-    .topbanner {
-        background-color: rgba(0, 0, 0, .2);
-        color: rgba(0, 0, 0, .6);
-        display: block;
-        padding-bottom: 32px;
-    }
-
-    .topbanner img {
-        width: 100%;
-        padding: 0px;
-    }
-
-    .topbanner_text {
-        display: flex;
-        flex-direction: column;
-        padding-left: 16px;
-    }
-
-    .topbanner button {
-        padding-top: 2%;
-        padding-bottom: 2%;
-        background-color: rgba(0, 0, 0, .4);
-        color: white;
-        border: none;
-        width: 90%;
-        height: 50%;
-        font-size: 1.5em;
-    }
-
-    /* mid banner */
-    .midbanner {
-        display: none;
-    }
-
-    /* mid banner - MOBILE */
-    .midbanner_mobile {
-        display: block;
-        padding-bottom: 32px;
-    }
-
-    .midbanner_mobile>.banner {
-        width: 100%;
-        max-width: 100%;
-    }
-
-    .midbanner_mobile>.banner>.orientation,
-    .midbanner_mobile>.banner>.campus,
-    .midbanner_mobile>.banner>.guest {
-        display: flex;
-        flex-direction: column;
-        border-bottom: none;
-    }
-
-    .midbanner_mobile>.banner>.orientation img,
-    .midbanner_mobile>.banner>.campus img,
-    .midbanner_mobile>.banner>.guest img {
-        max-width: 100%;
-        padding: 16px;
-    }
-
-    .midbanner_mobile>.banner>.orientation h2,
-    .midbanner_mobile>.banner>.campus h2,
-    .midbanner_mobile>.banner>.guest h2 {
-        font-size: xx-large;
-        color: rgba(0, 0, 0, .5);
-        margin: 0 0 0 16px;
-        padding: 0 0 0 16px;
-    }
-
-    .midbanner_mobile>.banner>.orientation p,
-    .midbanner_mobile>.banner>.campus p,
-    .midbanner_mobile>.banner>.guest p {
-        font-size: large;
-        color: rgba(0, 0, 0, .5);
-        margin: 16px 0 0 16px;
-        padding: 0 0 0 16px;
-    }
-
-    .read_more a:link {
-        color: rgba(0, 162, 255, .8);
-        text-decoration: none;
-    }
-
-    /* bottom banner */
-    .bottombanner-wrap {
-        display: none;
-    }
-
-    .bottombanner_mobile {
-        display: block;
-        border-top: 1px solid rgba(0, 0, 0, 0.1);
-        width: 100%;
-        padding-bottom: 32px;
-    }
-
-    .gray-bold-header {
-        font-size: xx-large;
-        font-weight: bolder;
-        color: rgba(0, 0, 0, .6);
-        padding: 32px 0 16px 0;
-        margin: 0 auto;
-        text-align: center;
-    }
-
-    .gray-background {
-        background-color: lightgray;
-        margin: 0 16 8 16;
-        padding: 16px 0 24px 16px;
-        font-size: x-large;
-        color: rgba(0, 0, 0, .5);
-        font-weight: 600;
-    }
-
-    .no-decoration {
-        text-decoration: none;
-    }
-
-    .gray-background:hover {
-        background-color: gray;
-        color: white;
-    }
-
-    .lastbanner-wrap {
-        display: none;
-    }
-
-    .lastbanner_mobile {
-        display: block;
-        border-top: 1px solid rgba(0, 0, 0, 0.1);
-        margin-bottom: 24px;
-        width: 100%;
-        box-sizing: border-box;
-    }
-
-    .full-width-container {
-        width: 100%;
-        margin: 0;
-    }
-
-    .full-width-container video {
-        width: 100%;
-    }
-    /* main section - END */
-
-    /* footer section - START */
-    .policies {
-        display: none;
-    }
-
-    footer {
-        margin-top: 0;
-        padding: 0 0 16px 0;
-        font-size: 16px;
-        border: none;
-    }
-    /* footer section - END */
 }
-/* mobile view media queries - END */
+
+@media only screen and (min-width: 1200px) {
+    .my-flex-item-inside {
+        width: 3vw;
+        height: 3vw;
+    }
+}
+
+@media only screen and (min-width: 1400px) {
+    .my-flex-item-inside {
+        width: 2.5vw;
+        height: 2.5vw;
+    }
+}
