--- a/css/styles.css
+++ b/css/styles.css
@@ -9,6 +9,10 @@ body {
     flex-direction: column;
 }
 
+nav {
+    font-family: monospace;
+}
+
 .carbon-fibre {
     background-color: black;
     background-image: url(/images/diamond_swatch_dark.png);
@@ -20,21 +24,45 @@ body {
     max-width: 1200px;
 }
 
-.console-font {
-    font-family: monospace;
-}
 
 .download-btn {
     border: 1px solid #0dcaf0;
     border-radius: 8px;
-    padding: 3px 10px;
+    padding: 0 10px;
     color: #0dcaf0;
+    margin:2px 0;
 }
 
 footer {
+    margin-top: auto;
+    height: 83px;
+}
+
+.footer-bar {
+    background-color: rgba(255, 255, 255, 0.1);
     padding: 0 20px;
     display: flex;
     align-items: center;
-    margin-top: auto;
-    height: 80px;
+    height: 60px;
+}
+
+.status-bar {
+    display: flex;
+    color: grey;
+    border-top: 1px solid rgba(255, 255, 255, 0.15);
+    background-color: black;
+    height: 22px;
+    font-size: small;
+    padding: 0 20px;
+}
+
+.margin-left-auto {
+    margin-left: auto;
+}
+
+.bi-linkedin{
+    color: #6699FF;
+}
+.bi-youtube {
+    color: #FF3366;
 }
