--- a/css/styles.css
+++ b/css/styles.css
@@ -74,6 +74,10 @@ h1, h2, h3, h4, h5, h6,
 /*** footer section start ***/
 /****************************/
 
+.footer-space {
+    line-height: 100px;
+}
+
 footer {
     height: 84px;
     position: fixed;
@@ -123,7 +127,6 @@ footer {
 .page-content {
     max-width: 1400px;
     margin: 0 auto;
-
 }
 
 .border-left {
@@ -131,10 +134,10 @@ footer {
 }
 
 #about {
-    height: calc(100vh - 137px);
+    height: calc(100vh - 114px);
     background-color: rgba(255, 255, 255, 0.08);
     align-items: center;
-    margin: 0 auto 84px;
+    margin: 0 auto;
     padding: 0 18px;
 }
 
